Add head and fix path to favicons

--- a/index.html
+++ b/index.html
@@ -2,9 +2,119 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+
+    <!-- Favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="./favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="./favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="./favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="./favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="./favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="./favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="./favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./favicon/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="./favicon/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- For share -->
+    <meta property="og:title" content="Taxi Igoumenitsa" />
+    <meta
+      property="og:image:secure_url"
+      itemprop="image"
+      content="./img/Logo.png"
+    />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
+    <meta
+      property="og:description"
+      content="Το δικό σας ταξί στην Ηγουμενίτσα | Your Taxi Igoumenitsa in Greece"
+    />
+
+    <!-- Description -->
+    <meta
+      name="description"
+      content="Καλώς ήρθατε στο Ταξί Ηγουμενίτσα. Προσφέρουμε διαδρομές σε όλη την Ελλάδα. Παμε μαζί σας όπου θέλετε, Λευκάδα, Ιωάννινα, Πρέβεζα, Θεσσαλονίκη, Αθήνα, Κέρκυρα, Πλαταριά, στις όμορφες παραλίες μας και σε άλλα πολλά μέρη. | Welcome to Taxi Igoumenitsa. We offer routes throughout Greece. We go with you wherever you want, Lefkada, Ioannina, Preveza, Thessaloniki, Athens, Corfu, Plataria, in our beautiful beaches and many other places. | Willkommen bei Taxi Igoumenitsa. Wir bieten Routen in ganz Griechenland an. Wir begleiten Sie wohin Sie wollen, Lefkada, Ioannina, Preveza, Thessaloniki, Athen, Korfu, Plataria, in unsere schönen Strände und viele andere Orte."
+    />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="./scss/main.scss" />
+
+    <!-- Title Taxi Igoumenitsa -->
+    <title>Taxi Igoumenitsa</title>
   </head>
   <body>
     <div id="app"></div>
