Add welcome section

--- a/index.html
+++ b/index.html
@@ -212,6 +212,20 @@
       </div>
     </nav>
 
+    <!-- Welcomescreen to the taxi in Igoumenitsa -->
+    <section class="bg-dark bg-gradient p-5 mt-5 text-center text-md-start">
+      <div class="container">
+        <div class="d-md-flex justify-content-between align-items-center">
+          <h1 class="text-light" id="lang">Καλώς ήρθατε στο</h1>
+          <img
+            class="img-fluid w-50"
+            src="./img/TaxiLogo.svg"
+            alt="Taxi Igoumenitsa Logo"
+          />
+        </div>
+      </div>
+    </section>
+
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
