Add drivers section

--- a/index.html
+++ b/index.html
@@ -226,6 +226,38 @@
       </div>
     </section>
 
+    <!-- Drivers -->
+    <section
+      class="bg-danger bg-gradient py-5 text-center text-md-end position-relative overflow-hidden line-container"
+    >
+      <img
+        class="line position-absolute top-0 start-0"
+        src="./img/Line.svg"
+        alt=""
+      />
+      <div class="container">
+        <div class="d-md-flex justify-content-between align-items-center">
+          <img
+            class="w-50 img-fluid"
+            src="./img/TaxiServices.svg"
+            alt="Services Igoumenitsa Taxi"
+          />
+          <h1
+            class="text-uppercase fw-bolder text-light"
+            style="letter-spacing: 1px"
+            id="lang"
+          >
+            Χρηστος και Γρηγορης Σπυριδωνου
+          </h1>
+        </div>
+      </div>
+      <img
+        class="line position-absolute bottom-0 start-0"
+        src="./img/Line.svg"
+        alt="Taxi Lines"
+      />
+    </section>
+
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
