Add taxi photos to index.html

--- a/index.html
+++ b/index.html
@@ -258,6 +258,27 @@
       />
     </section>
 
+    <!-- 2Taxis -->
+    <section class="bg-dark bg-gradient py-5 text-center text-md-start">
+      <div
+        class="container d-md-flex justify-content-between align-items-center"
+      >
+        <div>
+          <h1 class="scrollanimation text-light display-1 fw-bolder" id="lang">
+            2 Ταξί
+          </h1>
+          <h2 class="scrollanimation text-light display-6" id="lang">
+            25 χρόνια εμπειρία
+          </h2>
+        </div>
+        <img
+          class="img-fluid w-50"
+          src="./img/2taxi.png"
+          alt="2 Taxis in Igoumenitsa"
+        />
+      </div>
+    </section>
+
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
