--- a/index.html
+++ b/index.html
@@ -279,6 +279,22 @@
       </div>
     </section>
 
+    <!-- Language -->
+    <section class="bg-light bg-gradient py-5 text-center text-md-end">
+      <div
+        class="container d-md-flex justify-content-between align-items-center"
+      >
+        <img
+          class="scrollIn imgLanguage w-50"
+          src="./img/Language.svg"
+          alt="Languages in Igoumenitsa"
+        />
+        <h2 class="scrollanimation text-uppercase" id="lang">
+          Μιλαμε γερμανικα και αγγλικα
+        </h2>
+      </div>
+    </section>
+
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
