--- a/index.html
+++ b/index.html
@@ -295,6 +295,21 @@
       </div>
     </section>
 
+    <!-- Info -->
+    <section class="bg-primary bg-gradient py-5 text-center">
+      <div class="container">
+        <h1 class="scrollanimation text-light fw-bolder" id="lang">
+          Προτεραιότητά μας
+        </h1>
+        <h4 class="scrollanimation text-light" id="lang">Ασφάλεια</h4>
+        <h4 class="scrollanimation text-light" id="lang">Προσεγμένα οχήματα</h4>
+        <h4 class="scrollanimation text-light" id="lang">
+          Σεβασμός προς τον πελάτη
+        </h4>
+        <h4 class="scrollanimation text-light" id="lang">Άμεση εξυπηρέτηση</h4>
+      </div>
+    </section>
+
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
