Section for the services

--- a/index.html
+++ b/index.html
@@ -310,6 +310,36 @@
       </div>
     </section>
 
+    <!-- Services -->
+    <section
+      class="bg-danger bg-gradient py-5 text-light text-center text-md-start overflow-hidden position-relative"
+      id="services"
+    >
+      <img
+        class="line position-absolute top-0 start-0"
+        src="./img/Line.svg"
+        alt="Taxi Lines"
+      />
+      <div
+        class="container d-md-flex justify-content-between align-items-center"
+      >
+        <h2 class="scrollanimation display-6 text-uppercase" id="lang">
+          Εδρα Ηγουμενιτσα και σας παμε παντου
+        </h2>
+        <img
+          class="scrollIn imgInfoTravel img-fluid"
+          src="./img/TaxiInfo.svg"
+          alt="Taxi info in Igoumenitsa"
+          style="width: 30%"
+        />
+      </div>
+      <img
+        class="line position-absolute bottom-0 start-0"
+        src="./img/Line.svg"
+        alt="Taxi Line"
+      />
+    </section>
+
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
