Cards for the services

--- a/index.html
+++ b/index.html
@@ -340,6 +340,101 @@
       />
     </section>
 
+    <!-- Cards Services -->
+    <section class="bg-dark bg-gradient py-5">
+      <div class="container">
+        <h1 class="text-center text-light fw-light pb-4" id="lang">
+          Προσφέρουμε:
+        </h1>
+        <div class="row g-4">
+          <div class="scrollanimation col-md-6 col-lg-4">
+            <div class="card">
+              <img
+                src="./img/travel-greece.png"
+                alt="Travel from Igoumenitsa"
+                class="card-img-top"
+              />
+              <div class="card-body">
+                <p class="lead card-text text-center" id="lang">
+                  Μεταφορά σε όλη την Ελλάδα
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="scrollanimation col-md-6 col-lg-4">
+            <div class="card">
+              <img
+                src="./img/kids.png"
+                alt="Kids save in our taxi"
+                class="card-img-top"
+              />
+              <div class="card-body">
+                <p class="lead card-text text-center" id="lang">
+                  Μεταφορά παιδιών με ασφάλεια
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="scrollanimation col-md-6 col-lg-4">
+            <div class="card">
+              <img
+                src="./img/airport.png"
+                alt="From Igoumenitsa to airports"
+                class="card-img-top"
+              />
+              <div class="card-body">
+                <p class="lead card-text text-center" id="lang">
+                  Μεταφορά απο λιμάνια σε αεροδρόμια
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="scrollanimation col-md-6 col-lg-4">
+            <div class="card">
+              <img
+                src="./img/telephone.png"
+                alt="Calling taxi Igoumenitsa"
+                class="card-img-top"
+              />
+              <div class="card-body">
+                <p class="lead card-text text-center" id="lang">
+                  Κλήσεις - Ραντεβού
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="scrollanimation col-md-6 col-lg-4">
+            <div class="card">
+              <img
+                src="./img/statuepng.png"
+                alt="Historic tours from Igoumenitsa with our taxis"
+                class="card-img-top"
+              />
+              <div class="card-body">
+                <p class="lead card-text text-center" id="lang">
+                  Περιηγήσεις σε ιστορικά σημεία
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="scrollanimation col-md-6 col-lg-4">
+            <div class="card">
+              <img
+                src="./img/packages.png"
+                alt="Send packages with our taxi from Igoumenitsa"
+                class="card-img-top"
+              />
+              <div class="card-body">
+                <p class="lead card-text text-center" id="lang">
+                  Μεταφορά δεμάτων με ή χωρίς συνοδεία
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
