--- a/index.html
+++ b/index.html
@@ -435,6 +435,75 @@
       </div>
     </section>
 
+    <!-- Footer -->
+    <footer
+      class="bg-danger bg-gradient py-5 position-relative overflow-hidden"
+      id="contact"
+    >
+      <img
+        class="line position-absolute top-0 start-0"
+        src="./img/Line.svg"
+        alt="Taxi line"
+      />
+      <div class="container">
+        <div class="card bg-dark bg-gradient text-light text-center">
+          <div class="card-header" style="letter-spacing: 1px" id="lang">
+            Επικοινωνία
+          </div>
+          <div class="card-body">
+            <img
+              class="pb-3"
+              src="./img/TaxiLogo.svg"
+              alt="Taxi Igoumenitsa Logo"
+              style="width: 120px"
+            />
+            <h5 id="lang">Χρήστος και Γρηγόρης Σπυριδώνου</h5>
+            <h6 class="pt-3" id="lang">Τηλέφωνο:</h6>
+            <h6>
+              <a class="text-light" href="tel:+306932490031"
+                >+30 693 249 0031</a
+              >
+            </h6>
+            <h6 class="pt-3" id="lang">Ηλεκτρονική διεύθυνση:</h6>
+            <h6>
+              <a class="text-light" href="mailto:spyridonou.grigoris@gmail.com"
+                >spyridonou.grigoris@gmail.com</a
+              >
+            </h6>
+            <p class="pt-3 fw-light" id="lang">
+              Η ιστοσελίδα μας δεν χρησιμοποιεί Cookies
+            </p>
+            <h5 class="pt-5" id="lang">Θα μας βρείτε επιπλέον:</h5>
+            <a
+              class="pb-5 text-light"
+              href="https://www.facebook.com/Taxi-Igoumenitsa-Grigoris-Christos-526710317713326/"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="50"
+                height="50"
+                fill="currentColor"
+                class="bi bi-facebook"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
+                />
+              </svg>
+            </a>
+          </div>
+          <div class="card-footer text-muted">
+            <p>Copyright © by Ilias Dougias</p>
+          </div>
+        </div>
+      </div>
+      <img
+        class="line position-absolute bottom-0 start-0"
+        src="./img/Line.svg"
+        alt="Taxi line"
+      />
+    </footer>
+
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
