Add styles to project

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     </nav>
 
     <!-- Welcomescreen to the taxi in Igoumenitsa -->
-    <section class="bg-dark bg-gradient p-5 mt-5 text-center text-md-start">
+    <section class="bg-dark bg-gradient p-5 text-center text-md-start">
       <div class="container">
         <div class="d-md-flex justify-content-between align-items-center">
           <h1 class="text-light" id="lang">Καλώς ήρθατε στο</h1>
